# archtree

./: .gitignore  Cargo.toml  IMPROVEMENTS_SUMMARY.md  README.md  comprehensive_test.txt  debug_freshness.ps1  demo_relative_paths.txt  test_nested_paths.txt  test_paths.txt
src/: README.md  archiver.rs  config.rs  display.rs  exclusion.rs  input.rs  main.rs  new_service.rs  path_processor.rs  service.rs  validator.rs  verification_service.rs  verifier.rs
src/core/: config.rs  error.rs  mod.rs
src/io/: archiver.rs  input.rs  mod.rs
src/processing/: exclusions.rs  mod.rs  path_processor.rs  validation.rs
src/services/: backup.rs  mod.rs
src/verification/: display.rs  mod.rs  service.rs  verifier.rs
test_files/nested/cache/: data.tmp
testing_files/: demo_paths.txt  new_test_paths.txt  relative_demo.txt  simple_relative_demo.txt  test_paths_extended.txt  test_paths_realistic.txt  test_paths_with_exclusions.txt  unicode.7z  unicode_test_paths.txt
testing_files/test_files/: cache_data.json  important.doc
testing_files/test_files/deep/very/nested/folder/: cache_settings.json
testing_files/test_unicode_files/: файл_тест.txt  テストファイル.txt
trivia/: OLD_STRUCTURE_OVERVIEW.md  UNICODE_FIX_SUMMARY.md
